# quadruped-group-project-ecn

./: README.md
casadi_examples/: prototype_NLP.py  prototype_ode.py  protype_cgeneration.py
communication_test/: CMakeLists.txt  package.xml
communication_test/src/: communication_node.cpp  cpp_experimentation.cpp  forcepub.cpp  grf_retriver.cpp  localplansub.cpp  velpub.cpp
communication_test/src/casadi_example/: example.py
communication_test/src/ipopt_example/: example_main.cpp  example_nlp.cpp  example_nlp.hpp
communication_test/src/ipopt_example_ioannis/: ioannis_nlp.cpp  ioannis_nlp.hpp  main.cpp
communication_test/src/osqp_example_ioannis/: my_osqp.cpp  osqp_training.cpp
communication_test/src/qpOASES_example/: qpOASES_example  qpOASES_example.cpp
lmpc_controller/: CMakeLists.txt  package.xml
lmpc_controller/include/: lmpc_controller.h
lmpc_controller/include/lmpc_controller/: lmpc_controller.h
lmpc_controller/src/: lmpc_controller.cpp
local_planner/: CMakeLists.txt  local_planner.yaml  package.xml
local_planner/include/local_planner/: local_planner.h
local_planner/src/: local_planner.cpp
quad_simulator/gazebo_scripts/: CMakeLists.txt
quad_utils/launch/: planning.launch
quad_utils/src/: quad_kd.cpp
